static/css/main.css
/*-------global/absolutes------*/
body {
    padding: 0;
    margin: 0;
	font-size: 13px;
	font-family: Tahoma;
	overflow-y: scroll;
	color: #555;
}

ul, ol, li, form, img {
	border: none;
    list-style-type: none;
    margin: 0;
    padding: 0;
}

a {
	color: #4297D7;
}

.clear { clear: both; }
.inline { display: inline ;}

#wrapper {
	width: 600px;
    margin: 0 auto;
}

#logo {
    padding: 0px;
    position: absolute;
    left: 0;
}
    #logo h1, #logo h2 { position: relative; padding: 5px; }
    #logo h1:hover { border-left: 5px solid #ccc;}
    #logo h2:hover { border-left: 5px solid #eee;}
    #logo a { color: #555; text-decoration: none; }

    #logo h1 {
        width: 80px;
        font-size: 20px;
        background: #ccc;
        margin: 0;
    }
    
    #logo h2 {
        font-weight: normal;
        width: 60px;
        font-size: 13px;
        background: #eee;
        margin: 10px 0 0 0;
    }

/*-------search---*/
#search {
    background-color: #f3f3f3;
    font-family: Arial;
	width: 580px;
	display: inline-block;
    padding: 10px;
	clear: left;
	border-bottom: 1px solid #ccc;	
}   
    #search p {
        margin: 10px 0 0 0;
    }
    
    p#from, p#to {
        float: left;
        padding: 0;
        margin: 0;
    }

        #begin_date, #end_date {
            width: 100px;
        }
    
            .ui-datepicker-trigger {
                position: relative;
                vertical-align: middle;
                left: -20px;
            }
    #search_btn {
        width: 80px;
    }

    #options {
        display: none;
    }
        label {
            margin-right: 10px;
        }
        #options_passed, #options_failed {
            margin-left: 0;
        }

/*-----results------*/
#results { font-size: 11px; }
#result_header { cursor: default; }
#result_header h3{ background: #fff !important; }

ul#results li h3 { 
    cursor:pointer;
    background: transparent url(/static/images/listgrad.png) repeat;
    font-weight: normal;
    margin: 0;
}
ul#results li.record h3:hover { 
    background: transparent url(/static/images/listgradinverse.png) repeat;
}
ul#results li.record p {
    display: none;
}


#date_header, #time_header, #accession_header, #status_header,
.date, .time, .accession, .status, .status-fail, .status-pass { display: inline-block; padding: 5px;}

#date_header, .date { 
    width: 150px;
    text-indent: 15px;
}
.date_unfold { background: transparent url(/static/images/unfold.png) no-repeat; }
.date_fold { background: transparent url(/static/images/fold.png) no-repeat; }

#time_header, .time { width: 150px;}
#accession_header, .accession { width: 90px;}
#status_header, .status, .status-fail, .status-pass { width: 130px; text-align: right;}
    .status-fail { color: coral;}
    .status-pass { color: green;}

/*----pagination------*/
#pagination {
    margin: 10px 0 0 0;
}

.current_page, .page_select {
    margin-right: 8px;
    text-decoration: none;
}
.current_page {

}
.page_select {
}

/*---faq-----*/
#faq_contents {

}

